--- a/contact.html
+++ b/contact.html
@@ -326,6 +326,78 @@
     </div>
     <!-- Location End -->
     <div
+    class="footer container-fluid position-relative bg-dark text-white-50 py-6 px-5"
+  >
+    <div class="row g-5">
+      <div class="col-lg-6 pe-lg-5">
+        <a href="index.html" class="navbar-brand">
+          <h1 class="m-0 display-4">
+            <img
+              style="height: 300px"
+              src="img/footer-logo.png"
+              alt="Y.S. Builders Footer Logo"
+            />
+          </h1>
+          <!-- <h1 class="m-0 display-4 text-white text-uppercase"><i class="bi bi-building text-primary me-2"></i>YS Builders</h1> -->
+        </a>
+        <!-- <div class="d-flex justify-content-start mt-4">
+                  <a class="btn btn-lg btn-primary btn-lg-square rounded-0 me-2" href="#"><i class="fab fa-twitter"></i></a>
+                  <a class="btn btn-lg btn-primary btn-lg-square rounded-0 me-2" href="#"><i class="fab fa-facebook-f"></i></a>
+                  <a class="btn btn-lg btn-primary btn-lg-square rounded-0 me-2" href="#"><i class="fab fa-linkedin-in"></i></a>
+                  <a class="btn btn-lg btn-primary btn-lg-square rounded-0" href="#"><i class="fab fa-instagram"></i></a>
+              </div> -->
+      </div>
+      <div class="col-lg-6 ps-lg-5">
+        <div class="row g-5">
+          <div class="col-sm-6">
+            <h4 class="text-white text-uppercase mb-4">Quick Links</h4>
+            <div class="d-flex flex-column justify-content-start">
+              <a class="text-white mb-2" href="index.html"
+                ><i class="fa fa-angle-right me-2"></i>Home</a
+              >
+              <a class="text-white mb-2" href="about.html"
+                ><i class="fa fa-angle-right me-2"></i>About Us</a
+              >
+              <a class="text-white mb-2" href="service.html"
+                ><i class="fa fa-angle-right me-2"></i>Our Services</a
+              >
+              <a class="text-white mb-2" href="project.html"
+                ><i class="fa fa-angle-right me-2"></i>Our Portfolio</a
+              >
+              <a class="text-white mb-2" href="blog.html"
+                ><i class="fa fa-angle-right me-2"></i>Blog</a
+              >
+              <a class="text-white" href="contact.html"
+                ><i class="fa fa-angle-right me-2"></i>Contact Us</a
+              >
+            </div>
+          </div>
+          <div class="col-sm-6">
+            <h4 class="text-white text-uppercase mb-4">Locations</h4>
+            <div class="d-flex flex-column justify-content-start text-white">
+              <p>
+                <i class="fa fa-map-marker-alt me-2 text-white"></i><a href="https://maps.app.goo.gl/2jRuVAPdA3SXr8KA9" target="_blank">Kupondole, Lalitpur,
+                Nepal</a>
+              </p>
+              <p><i class="fa fa-phone-alt me-2 text-white"></i><a href="tel://+9779860915451">+977 9860915451</a></p>
+              <p>
+                <i class="fa fa-envelope me-2 text-white"></i><a
+                href="mailto:ysbuilders075@gmail.com"
+                >ysbuilders075@gmail.com</a>
+              </p>
+              <!-- <div class="d-flex justify-content-start mt-4">
+                              <a class="btn btn-lg btn-primary btn-lg-square rounded-0 me-2" href="#"><i class="fab fa-twitter"></i></a>
+                              <a class="btn btn-lg btn-primary btn-lg-square rounded-0 me-2" href="#"><i class="fab fa-facebook-f"></i></a>
+                              <a class="btn btn-lg btn-primary btn-lg-square rounded-0 me-2" href="#"><i class="fab fa-linkedin-in"></i></a>
+                              <a class="btn btn-lg btn-primary btn-lg-square rounded-0" href="#"><i class="fab fa-instagram"></i></a>
+                          </div> -->
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+    <div
       class="container-fluid bg-dark text-white border-top border-primary px-0"
     >
       <div class="d-flex flex-column flex-md-row justify-content-between">
