--- a/index.html
+++ b/index.html
@@ -223,7 +223,8 @@
           <div class="row gx-5 py-2">
             <div class="col-sm-6 mb-2">
               <p class="fw-bold mb-2">
-                <i class="fa fa-check text-primary me-3"></i>Expertise and Experience
+                <i class="fa fa-check text-primary me-3"></i>Expertise and
+                Experience
               </p>
               <p class="fw-bold mb-2">
                 <i class="fa fa-check text-primary me-3"></i>Tailored Solutions
@@ -233,16 +234,18 @@
                 Process
               </p>
               <p class="fw-bold mb-2">
-                <i class="fa fa-check text-primary me-3"></i>Customer-Centric Approach
+                <i class="fa fa-check text-primary me-3"></i>Customer-Centric
+                Approach
               </p>
               <p class="fw-bold mb-2">
-                <i class="fa fa-check text-primary me-3"></i>Sustainability Focus
-                Process
+                <i class="fa fa-check text-primary me-3"></i>Sustainability
+                Focus Process
               </p>
             </div>
             <div class="col-sm-6 mb-2">
               <p class="fw-bold mb-2">
-                <i class="fa fa-check text-primary me-3"></i>Commitment to Quality
+                <i class="fa fa-check text-primary me-3"></i>Commitment to
+                Quality
               </p>
               <p class="fw-bold mb-2">
                 <i class="fa fa-check text-primary me-3"></i>On-Time Delivery
@@ -252,16 +255,18 @@
                 <i class="fa fa-check text-primary me-3"></i>Transparency
               </p>
               <p class="fw-bold mb-2">
-                <i class="fa fa-check text-primary me-3"></i>Safety and Compliance
+                <i class="fa fa-check text-primary me-3"></i>Safety and
+                Compliance
               </p>
               <p class="fw-bold mb-2">
-                <i class="fa fa-check text-primary me-3"></i>Innovative Technology
+                <i class="fa fa-check text-primary me-3"></i>Innovative
+                Technology
               </p>
             </div>
           </div>
         </div>
         <div class="col-lg-5 pb-5" style="min-height: 500px">
-          <div class="position-relative  h-100 ms-5">
+          <div class="position-relative h-100 ms-5">
             <img
               class="position-absolute w-100 h-100 mt-3 ms-n5"
               src="img/about.jpg"
@@ -349,7 +354,7 @@
           <div
             class="service-item bg-white rounded d-flex flex-column align-items-center text-center"
           >
-            <img class="img-fluid" src="img/service/services-5.webp" alt="" />
+            <img class="img-fluid" src="img/service/services-7.webp" alt="" />
             <div class="service-icon bg-white">
               <i class="fa fa-3x fa-tools text-primary"></i>
             </div>
@@ -648,7 +653,7 @@
       </div>
       <div class="row gx-0 align-items-center">
         <div class="col-xl-4 col-lg-5 d-none d-lg-block">
-          <img class="img-fluid w-100 h-100" src="img/testimonial.jpg" />
+          <img class="img-fluid w-100 h-100" src="img/testimonial/happy.webp" />
         </div>
         <div class="col-xl-8 col-lg-7 col-md-12">
           <div class="testimonial bg-light">
@@ -657,7 +662,7 @@
                 <div class="col-xl-4 col-lg-5 col-md-5">
                   <img
                     class="img-fluid w-100 h-100 bg-light p-lg-3 mb-4 mb-md-0"
-                    src="img/testimonial-1.jpg"
+                    src="img/testimonial/client-1.webp"
                     alt=""
                   />
                 </div>
@@ -677,7 +682,7 @@
                 <div class="col-xl-4 col-lg-5 col-md-5">
                   <img
                     class="img-fluid w-100 h-100 bg-light p-lg-3 mb-4 mb-md-0"
-                    src="img/testimonial-2.jpg"
+                    src="img/testimonial/client-3.webp"
                     alt=""
                   />
                 </div>
@@ -691,6 +696,29 @@
                     Builders exceeded my expectations with their craftsmanship
                     and professionalism. They truly understand the art of
                     construction.
+                  </p>
+                </div>
+              </div>
+              <div class="row gx-4 align-items-center">
+                <div class="col-xl-4 col-lg-5 col-md-5">
+                  <img
+                    class="img-fluid w-100 h-100 bg-light p-lg-3 mb-4 mb-md-0"
+                    src="img/testimonial/client-2.webp"
+                    alt=""
+                  />
+                </div>
+                <div class="col-xl-8 col-lg-7 col-md-7">
+                  <h4 class="text-uppercase mb-0">रमेश शर्मा</h4>
+                  <p>Manager</p>
+                  <p class="fs-5 mb-0">
+                    <i class="fa fa-2x fa-quote-left text-primary me-2"></i>
+                    मेरो घरको निर्माणका लागि म Y.S. Builders सँग काम गर्न पाउँदा
+                    अत्यन्तै खुशी छु। निर्माण प्रक्रियाको हरेक चरणमा उनीहरुको
+                    योजना, व्यवस्थापन, र गुणस्तरप्रतिको प्रतिबद्धता अत्यन्तै
+                    प्रशंसनीय थियो। उनीहरुको अनुभव र व्यावसायिक दक्षताले मेरो घर
+                    समयमै र बिना कुनै झन्झट सम्पन्न गरियो। म भविष्यमा पनि अरू
+                    निर्माण परियोजनाहरूको लागि Y.S. Builders सँग पुनः काम
+                    गर्नेछु।
                   </p>
                 </div>
               </div>
