--- a/service.html
+++ b/service.html
@@ -190,7 +190,7 @@
             <div
               class="service-item bg-white rounded d-flex flex-column align-items-center text-center"
             >
-              <img class="img-fluid" src="img/service/services-5.webp" alt="" />
+              <img class="img-fluid" src="img/service/services-7.webp" alt="" />
               <div class="service-icon bg-white">
                 <i class="fa fa-3x fa-tools text-primary"></i>
               </div>
@@ -325,59 +325,88 @@
 
     <!-- Testimonial Start -->
     <div class="container-fluid bg-light py-6 px-5">
-        <div class="text-center mx-auto mb-5" style="max-width: 600px">
-          <h1 class="display-5 text-uppercase mb-4">
-            What Our <span class="text-primary">Happy Cleints</span> Say!!!
-          </h1>
+      <div class="text-center mx-auto mb-5" style="max-width: 600px">
+        <h1 class="display-5 text-uppercase mb-4">
+          What Our <span class="text-primary">Happy Cleints</span> Say!!!
+        </h1>
+      </div>
+      <div class="row gx-0 align-items-center">
+        <div class="col-xl-4 col-lg-5 d-none d-lg-block">
+          <img class="img-fluid w-100 h-100" src="img/testimonial/happy.webp" />
         </div>
-        <div class="row gx-0 align-items-center">
-          <div class="col-xl-4 col-lg-5 d-none d-lg-block">
-            <img class="img-fluid w-100 h-100" src="img/testimonial.jpg" />
-          </div>
-          <div class="col-xl-8 col-lg-7 col-md-12">
-            <div class="testimonial bg-light">
-              <div class="owl-carousel testimonial-carousel">
-                <div class="row gx-4 align-items-center">
-                  <div class="col-xl-4 col-lg-5 col-md-5">
-                    <img
-                      class="img-fluid w-100 h-100 bg-light p-lg-3 mb-4 mb-md-0"
-                      src="img/testimonial-1.jpg"
-                      alt=""
-                    />
-                  </div>
-                  <div class="col-xl-8 col-lg-7 col-md-7">
-                    <h4 class="text-uppercase mb-0">Rajesh Shrestha</h4>
-                    <p>Business Owner </p>
-                    <p class="fs-5 mb-0">
-                      <i class="fa fa-2x fa-quote-left text-primary me-2"></i>
-                      Choosing Y.S. Builders for our new commercial building was the best decision we made. Their team delivered top-quality work with great attention to detail, and the project was completed on time. We’re extremely happy with the results!
-                    </p>
-                  </div>
+        <div class="col-xl-8 col-lg-7 col-md-12">
+          <div class="testimonial bg-light">
+            <div class="owl-carousel testimonial-carousel">
+              <div class="row gx-4 align-items-center">
+                <div class="col-xl-4 col-lg-5 col-md-5">
+                  <img
+                    class="img-fluid w-100 h-100 bg-light p-lg-3 mb-4 mb-md-0"
+                    src="img/testimonial/client-1.webp"
+                    alt=""
+                  />
                 </div>
-                <div class="row gx-4 align-items-center">
-                  <div class="col-xl-4 col-lg-5 col-md-5">
-                    <img
-                      class="img-fluid w-100 h-100 bg-light p-lg-3 mb-4 mb-md-0"
-                      src="img/testimonial-2.jpg"
-                      alt=""
-                    />
-                  </div>
-                  <div class="col-xl-8 col-lg-7 col-md-7">
-                    <h4 class="text-uppercase mb-0">Srijana Maharjan </h4>
-                    <p>Architect</p>
-                    <p class="fs-5 mb-0">
-                      <i class="fa fa-2x fa-quote-left text-primary me-2"></i>
-                      As an architect, I am always looking for partners who can bring my designs to life with precision and creativity. Y.S. Builders exceeded my expectations with their craftsmanship and professionalism. They truly understand the art of construction.
-                    </p>
-                  </div>
+                <div class="col-xl-8 col-lg-7 col-md-7">
+                  <h4 class="text-uppercase mb-0">Rajesh Shrestha</h4>
+                  <p>Business Owner</p>
+                  <p class="fs-5 mb-0">
+                    <i class="fa fa-2x fa-quote-left text-primary me-2"></i>
+                    Choosing Y.S. Builders for our new commercial building was
+                    the best decision we made. Their team delivered top-quality
+                    work with great attention to detail, and the project was
+                    completed on time. We’re extremely happy with the results!
+                  </p>
+                </div>
+              </div>
+              <div class="row gx-4 align-items-center">
+                <div class="col-xl-4 col-lg-5 col-md-5">
+                  <img
+                    class="img-fluid w-100 h-100 bg-light p-lg-3 mb-4 mb-md-0"
+                    src="img/testimonial/client-3.webp"
+                    alt=""
+                  />
+                </div>
+                <div class="col-xl-8 col-lg-7 col-md-7">
+                  <h4 class="text-uppercase mb-0">Srijana Maharjan</h4>
+                  <p>Architect</p>
+                  <p class="fs-5 mb-0">
+                    <i class="fa fa-2x fa-quote-left text-primary me-2"></i>
+                    As an architect, I am always looking for partners who can
+                    bring my designs to life with precision and creativity. Y.S.
+                    Builders exceeded my expectations with their craftsmanship
+                    and professionalism. They truly understand the art of
+                    construction.
+                  </p>
+                </div>
+              </div>
+              <div class="row gx-4 align-items-center">
+                <div class="col-xl-4 col-lg-5 col-md-5">
+                  <img
+                    class="img-fluid w-100 h-100 bg-light p-lg-3 mb-4 mb-md-0"
+                    src="img/testimonial/client-2.webp"
+                    alt=""
+                  />
+                </div>
+                <div class="col-xl-8 col-lg-7 col-md-7">
+                  <h4 class="text-uppercase mb-0">रमेश शर्मा</h4>
+                  <p>Manager</p>
+                  <p class="fs-5 mb-0">
+                    <i class="fa fa-2x fa-quote-left text-primary me-2"></i>
+                    मेरो घरको निर्माणका लागि म Y.S. Builders सँग काम गर्न पाउँदा
+                    अत्यन्तै खुशी छु। निर्माण प्रक्रियाको हरेक चरणमा उनीहरुको
+                    योजना, व्यवस्थापन, र गुणस्तरप्रतिको प्रतिबद्धता अत्यन्तै
+                    प्रशंसनीय थियो। उनीहरुको अनुभव र व्यावसायिक दक्षताले मेरो घर
+                    समयमै र बिना कुनै झन्झट सम्पन्न गरियो। म भविष्यमा पनि अरू
+                    निर्माण परियोजनाहरूको लागि Y.S. Builders सँग पुनः काम
+                    गर्नेछु।
+                  </p>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <!-- Testimonial End -->
-
+    </div>
+    <!-- Testimonial End -->
        <!-- Location Start -->
     <div class="container-fluid bg-light overflow-hidden py-2 px-lg-0">
       <div class="row g-5">
