--- a/index.html
+++ b/index.html
@@ -143,11 +143,11 @@
       >
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="w-100" src="img/carousel-1.jpg" alt="Image" />
+            <img class="w-100" src="img/home/carousel-1.webp" alt="Image" />
             <div
               class="carousel-caption d-flex flex-column align-items-center justify-content-center"
             >
-              <div class="p-3" style="max-width: 900px">
+              <div class="p-3" style="max-width: 1000px">
                 <i
                   class="fa fa-home fa-4x text-primary mb-4 d-none d-sm-block"
                 ></i>
@@ -163,11 +163,11 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img class="w-100" src="img/carousel-2.jpg" alt="Image" />
+            <img class="w-100" src="img/home/carousel-3.webp" alt="Image" />
             <div
               class="carousel-caption d-flex flex-column align-items-center justify-content-center"
             >
-              <div class="p-3" style="max-width: 900px">
+              <div class="p-3" style="max-width: 1000px">
                 <i
                   class="fa fa-tools fa-4x text-primary mb-4 d-none d-sm-block"
                 ></i>
