--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
 
 <body>
     <!-- Topbar Start -->
-    <div class="container-fluid px-5 d-none bg-yellow d-lg-block">
+    <div class="container-fluid px-5 d-none bg-light d-lg-block">
       <div class="row gx-5">
         <div class="col-lg-4 text-center py-3">
           <div class="d-inline-flex align-items-center">
