--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
   <body>
     <!-- Topbar Start -->
-    <div class="container-fluid px-5 d-none bg-yellow d-lg-block">
+    <div class="container-fluid px-5 d-none bg-light d-lg-block">
       <div class="row gx-5">
         <div class="col-lg-4 text-center py-3">
           <div class="d-inline-flex align-items-center">
@@ -296,9 +296,6 @@
             </div>
             <div class="px-4 pb-4">
               <h4 class="text-uppercase mb-3">Building Construction</h4>
-              <a class="btn text-primary" href=""
-                >Read More <i class="bi bi-arrow-right"></i
-              ></a>
             </div>
           </div>
         </div>
@@ -312,9 +309,6 @@
             </div>
             <div class="px-4 pb-4">
               <h4 class="text-uppercase mb-3">House Renovation</h4>
-              <a class="btn text-primary" href=""
-                >Read More <i class="bi bi-arrow-right"></i
-              ></a>
             </div>
           </div>
         </div>
@@ -328,9 +322,6 @@
             </div>
             <div class="px-4 pb-4">
               <h4 class="text-uppercase mb-3">Architecture Design</h4>
-              <a class="btn text-primary" href=""
-                >Read More <i class="bi bi-arrow-right"></i
-              ></a>
             </div>
           </div>
         </div>
@@ -344,9 +335,7 @@
             </div>
             <div class="px-4 pb-4">
               <h4 class="text-uppercase mb-3">Interior Design</h4>
-              <a class="btn text-primary" href=""
-                >Read More <i class="bi bi-arrow-right"></i
-              ></a>
+              
             </div>
           </div>
         </div>
@@ -360,9 +349,7 @@
             </div>
             <div class="px-4 pb-4">
               <h4 class="text-uppercase mb-3">Fixing & Support</h4>
-              <a class="btn text-primary" href=""
-                >Read More <i class="bi bi-arrow-right"></i
-              ></a>
+             
             </div>
           </div>
         </div>
@@ -376,9 +363,6 @@
             </div>
             <div class="px-4 pb-4">
               <h4 class="text-uppercase mb-3">Painting</h4>
-              <a class="btn text-primary" href=""
-                >Read More <i class="bi bi-arrow-right"></i
-              ></a>
             </div>
           </div>
         </div>
@@ -733,13 +717,13 @@
     <div class="container-fluid py-6 px-5">
       <div class="text-center mx-auto mb-5" style="max-width: 600px">
         <h1 class="display-5 text-uppercase mb-4">
-          Latest <span class="text-primary">Articles</span> From Our Blog Post
+          Latest <span class="text-primary">Articles</span> From <span class="text-primary">Our Blog</span> Post
         </h1>
       </div>
       <div class="row g-5">
         <div class="col-lg-4 col-md-6">
           <div class="bg-light">
-            <img class="img-fluid" src="img/blog-1.jpg" alt="" />
+            <img class="img-fluid" src="img/blog/blog-1.webp" style="min-height: 360px;" alt="" />
             <div class="p-4">
               <div class="d-flex justify-content-between mb-4">
                 <div class="d-flex align-items-center">
@@ -754,13 +738,13 @@
                 </div>
                 <div class="d-flex align-items-center">
                   <span class="ms-3"
-                    ><i class="far fa-calendar-alt text-primary me-2"></i>01
-                    Jan, 2024</span
+                    ><i class="far fa-calendar-alt text-primary me-2"></i>11
+                    Sep, 2024</span
                   >
                 </div>
               </div>
               <h4 class="text-uppercase mb-3">
-                Rebum diam clita lorem erat magna est erat
+                Leading construction Company in Kathmandu
               </h4>
               <a class="text-uppercase fw-bold" href=""
                 >Read More <i class="bi bi-arrow-right"></i
@@ -770,7 +754,7 @@
         </div>
         <div class="col-lg-4 col-md-6">
           <div class="bg-light">
-            <img class="img-fluid" src="img/blog-2.jpg" alt="" />
+            <img class="img-fluid" src="img/blog/blog-5.webp" alt="" />
             <div class="p-4">
               <div class="d-flex justify-content-between mb-4">
                 <div class="d-flex align-items-center">
@@ -786,13 +770,13 @@
                 </div>
                 <div class="d-flex align-items-center">
                   <span class="ms-3"
-                    ><i class="far fa-calendar-alt text-primary me-2"></i>01
-                    Jan, 2024</span
+                    ><i class="far fa-calendar-alt text-primary me-2"></i>11
+                    Sep, 2024</span
                   >
                 </div>
               </div>
               <h4 class="text-uppercase mb-3">
-                Rebum diam clita lorem erat magna est erat
+                Cost of Building a House in Nepal: Budgeting Guidelines
               </h4>
               <a class="text-uppercase fw-bold" href=""
                 >Read More <i class="bi bi-arrow-right"></i
@@ -802,7 +786,7 @@
         </div>
         <div class="col-lg-4 col-md-6">
           <div class="bg-light">
-            <img class="img-fluid" src="img/blog-3.jpg" alt="" />
+            <img class="img-fluid" src="img/blog/blog-3.webp" alt="" />
             <div class="p-4">
               <div class="d-flex justify-content-between mb-4">
                 <div class="d-flex align-items-center">
@@ -817,13 +801,13 @@
                 </div>
                 <div class="d-flex align-items-center">
                   <span class="ms-3"
-                    ><i class="far fa-calendar-alt text-primary me-2"></i>01
-                    Jan, 2024</span
+                    ><i class="far fa-calendar-alt text-primary me-2"></i>11
+                    Sep, 2024</span
                   >
                 </div>
               </div>
               <h4 class="text-uppercase mb-3">
-                Rebum diam clita lorem erat magna est erat
+                Build Wise, Build Strong: Why Choose Pillar Construction in Nepal?
               </h4>
               <a class="text-uppercase fw-bold" href=""
                 >Read More <i class="bi bi-arrow-right"></i
