--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
           <div class="position-relative h-100 ms-5">
             <img
               class="position-absolute w-100 h-100 mt-3 ms-n5"
-              src="img/about.jpg"
+              src="img/home/carousel-4.webp"
               style="object-fit: cover"
             />
           </div>
