--- a/contact.html
+++ b/contact.html
@@ -219,7 +219,7 @@
                   <br />
                   <div class="form-floating">
                     <input
-                      type="text"
+                      type="number"
                       class="form-control"
                       id="contact-number"
                       placeholder="Contact Number"
