home-design-change

--- a/index.html
+++ b/index.html
@@ -264,7 +264,16 @@
               </p>
             </div>
           </div>
+          <br/>
+          <div class="text-center" style="max-width: 400px">
+            <a
+              href="about.html"
+              class="nav-item nav-link btn btn-primary text-white px-5 ms-3 d-none d-lg-block"
+              >Learn More<i class="bi bi-arrow-right"></i
+            ></a>
+          </div>
         </div>
+        
         <div class="col-lg-5 pb-5" style="min-height: 500px">
           <div class="position-relative h-100 ms-5">
             <img
@@ -370,77 +379,111 @@
     </div>
     <!-- Services End -->
 
-    <!-- Team Start -->
-    <div class="container-fluid py-4 px-5 bg-yellow">
-      <div class="text-center mx-auto mb-4">
-        <div class="row gx-5">
-          <div class="col-12 text-center">
-            <div class="d-inline-block bg-white text-center pt-0 px-5 mb-4">
-              <img src="img/team-1.jpg" style="width: 300px; height: 300px" />
-              <br />
-              <h3 class="display-7 text-uppercase mb-2">
-                Late <span class="text-primary">Yadav Bikram Shah</span>
-              </h3>
-              <h5 class="text-body">Founder</h5>
-            </div>
+    <!-- Appointment Start -->
+    <div class="container-fluid bg-yellow py-6 px-5">
+      <div class="row gx-5">
+        <div class="col-lg-4 mb-5 mb-lg-0">
+          <div class="mb-4">
+            <h1 class="display-5 text-uppercase mb-4">
+              Get In <span class="text-primary">Touch</span>
+            </h1>
           </div>
-          <h1 class="display-5 text-uppercase mb-4">
-            Our <span class="text-primary">Core</span> Team
-          </h1>
-          <div class="col-12 text-center">
-            <div class="d-inline-block bg-white text-center pt-4 px-5">
-              <img src="img/team-2.jpg" style="width: 300px; height: 300px" />
-              <br />
-              <h3 class="display-7 text-uppercase mb-2">
-                <span class="text-primary"> Sabujan Bikram Shah</span>
-              </h3>
-              <h5 class="text-body">C.E.O</h5>
-            </div>
+          <p class="fs-5 mb-0">
+            Building your architectural aspirations, incrementally. Whether you
+            are prepared to start on your next significant endeavour or are
+            seeking assistance, we are available to provide guidance. Contact us
+            immediately, and let us collaborate to produce something
+            exceptional.
+          </p>
+          <br />
+          <a class="btn btn-primary py-3 px-5" href="contact.html"
+            >Contact Us</a
+          >
+        </div>
+        <div class="col-lg-8">
+          <div class="bg-light text-center p-5">
+            <form action="https://api.web3forms.com/submit"
+            method="POST">
+              <div class="row g-3">
+                <div class="col-12 col-sm-6">
+                  <input
+                      type="hidden"
+                      name="access_key"
+                      value="ac0fc024-542b-49d8-8815-891454511d69"
+                    />
+                  <input
+                    type="text"
+                    id="name"
+                    class="form-control border-0"
+                    placeholder="Your Name"
+                    name="Name"
+                    style="height: 55px"
+                  />
+                </div>
+                <div class="col-12 col-sm-6">
+                  <input
+                    type="email"
+                    id="email"
+                    class="form-control border-0"
+                    placeholder="Your Email"
+                    style="height: 55px"
+                    name="Email Address"
+                  />
+                </div>
+                <div class="col-12 col-sm-6">
+                  <input
+                    type="text"
+                    id="subject"
+                    class="form-control border-0"
+                    placeholder="Subject"
+                    style="height: 55px"
+                    name="Subject"
+                  />
+                </div>
+                <div class="col-12 col-sm-6">
+                  <input
+                    type="number"
+                    id="contact-number"
+                    class="form-control border-0"
+                    placeholder="Your Phone Number"
+                    style="height: 55px"
+                    name="Phone Number"
+                  />
+                </div>
+
+                <div class="col-12">
+                  <textarea
+                    class="form-control border-0"
+                    rows="5"
+                    id="message"
+                    placeholder="Message"
+                    name="Message"
+                  ></textarea>
+                </div>
+                <input
+                  type="hidden"
+                  name="redirect"
+                  value="https://www.ysbuilders.com.np/thanks.html"
+                />
+                <div class="h-captcha" data-captcha="true"></div>
+                <input
+                  type="checkbox"
+                  name="botcheck"
+                  class="hidden"
+                  style="display: none"
+                />
+                <div class="col-12">
+                  <button class="btn btn-primary w-100 py-3" type="submit">
+                    Submit Form
+                  </button>
+                </div>
+              </div>
+            </form>
           </div>
         </div>
-      </div>
-      <div class="row px-4 gx-6">
-        <div class="col-lg-6 col-md-6">
-          <div class="position-relative">
-            <img
-              class="img-fluid w-100"
-              src="img/team-4.jpg"
-              alt=""
-              style="min-height: 350px; max-width: 360px; max-height: 360px"
-            />
-          </div>
-          <div style="margin-left: 78px">
-            <h3 class="display-7 text-uppercase mb-2">
-              <span class="text-primary">Sangita Shahi</span>
-            </h3>
-            <h5 class="text-body" style="margin-left: 80px">M.D</h5>
-          </div>
-        </div>
-        <div class="col-lg-6 col-md-6">
-          <div class="position-relative">
-            <img
-              class="img-fluid w-100"
-              src="img/team-3.jpg"
-              alt=""
-              style="min-height: 300px; max-width: 360px; max-height: 350px"
-            />
-          </div>
-          <div style="margin-left: 70px">
-            <h3 class="display-7 text-uppercase mb-2">
-              <span class="text-primary">Sangita Shahi</span>
-            </h3>
-            <h5 class="text-body" style="margin-left: 100px">M.D</h5>
-          </div>
-        </div>
-      </div>
-      <div class="text-center mx-auto" style="max-width: 500px">
-        <a
-          href="project.html"
-          class="nav-item nav-link btn btn-primary text-white px-5 ms-3 d-none d-lg-block"
-          >View All Team Members<i class="bi bi-arrow-right"></i
-        ></a>
       </div>
     </div>
+    <!-- Appointment End -->
 
     <!-- Portfolio Start -->
     <div class="container-fluid bg-light py-6 px-5">
@@ -551,114 +594,10 @@
     <!-- Portfolio End -->
 
 
-    <!-- Appointment Start -->
-    <div class="container-fluid bg-yellow py-6 px-5">
-      <div class="row gx-5">
-        <div class="col-lg-4 mb-5 mb-lg-0">
-          <div class="mb-4">
-            <h1 class="display-5 text-uppercase mb-4">
-              Get In <span class="text-primary">Touch</span>
-            </h1>
-          </div>
-          <p class="fs-5 mb-0">
-            Building your architectural aspirations, incrementally. Whether you
-            are prepared to start on your next significant endeavour or are
-            seeking assistance, we are available to provide guidance. Contact us
-            immediately, and let us collaborate to produce something
-            exceptional.
-          </p>
-          <br />
-          <a class="btn btn-primary py-3 px-5" href="contact.html"
-            >Contact Us</a
-          >
-        </div>
-        <div class="col-lg-8">
-          <div class="bg-light text-center p-5">
-            <form action="https://api.web3forms.com/submit"
-            method="POST">
-              <div class="row g-3">
-                <div class="col-12 col-sm-6">
-                  <input
-                      type="hidden"
-                      name="access_key"
-                      value="ac0fc024-542b-49d8-8815-891454511d69"
-                    />
-                  <input
-                    type="text"
-                    id="name"
-                    class="form-control border-0"
-                    placeholder="Your Name"
-                    name="Name"
-                    style="height: 55px"
-                  />
-                </div>
-                <div class="col-12 col-sm-6">
-                  <input
-                    type="email"
-                    id="email"
-                    class="form-control border-0"
-                    placeholder="Your Email"
-                    style="height: 55px"
-                    name="Email Address"
-                  />
-                </div>
-                <div class="col-12 col-sm-6">
-                  <input
-                    type="text"
-                    id="subject"
-                    class="form-control border-0"
-                    placeholder="Subject"
-                    style="height: 55px"
-                    name="Subject"
-                  />
-                </div>
-                <div class="col-12 col-sm-6">
-                  <input
-                    type="number"
-                    id="contact-number"
-                    class="form-control border-0"
-                    placeholder="Your Phone Number"
-                    style="height: 55px"
-                    name="Phone Number"
-                  />
-                </div>
-
-                <div class="col-12">
-                  <textarea
-                    class="form-control border-0"
-                    rows="5"
-                    id="message"
-                    placeholder="Message"
-                    name="Message"
-                  ></textarea>
-                </div>
-                <input
-                  type="hidden"
-                  name="redirect"
-                  value="https://www.ysbuilders.com.np/thanks.html"
-                />
-                <div class="h-captcha" data-captcha="true"></div>
-                <input
-                  type="checkbox"
-                  name="botcheck"
-                  class="hidden"
-                  style="display: none"
-                />
-                <div class="col-12">
-                  <button class="btn btn-primary w-100 py-3" type="submit">
-                    Submit Form
-                  </button>
-                </div>
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- Appointment End -->
+    
 
     <!-- Testimonial Start -->
-    <div class="container-fluid bg-light py-6 px-5">
+    <div class="container-fluid bg-yellow py-6 px-5">
       <div class="text-center mx-auto mb-5" style="max-width: 600px">
         <h1 class="display-5 text-uppercase mb-4">
           What Our <span class="text-primary">Happy Cleints</span> Say!!!
@@ -743,7 +682,7 @@
     <!-- Testimonial End -->
 
     <!-- Blog Start -->
-    <div class="container-fluid py-6 px-5 bg-yellow">
+    <div class="container-fluid py-6 px-5 bg-light">
       <div class="text-center mx-auto mb-5" style="max-width: 600px">
         <h1 class="display-5 text-uppercase mb-4">
           Latest <span class="text-primary">Articles</span> From <span class="text-primary">Our Blog</span> Post
@@ -849,7 +788,7 @@
     <!-- Blog End -->
 
     <!-- Location Start -->
-    <div class="container-fluid bg-light overflow-hidden py-2 px-lg-0">
+    <div class="container-fluid bg-yellow overflow-hidden py-1 px-lg-0">
       <div class="row g-5">
         <h1 class="display-5 text-uppercase text-center mb-4">
           Latest <span class="text-primary">Our</span> Location
