--- a/index.html
+++ b/index.html
@@ -297,9 +297,9 @@
       <div class="row g-5">
         <div class="col-lg-4 col-md-6">
           <div
-            class="service-item bg-white d-flex flex-column align-items-center text-center"
+            class="service-item service-radius bg-yellow d-flex flex-column align-items-center text-center" 
           >
-            <img class="img-fluid" src="img/service/services-1.webp" alt="" />
+            <img class="img-fluid service-img" src="img/service/services-1.webp" alt="" />
             <div class="service-icon bg-white">
               <i class="fa fa-3x fa-building text-primary"></i>
             </div>
@@ -310,9 +310,9 @@
         </div>
         <div class="col-lg-4 col-md-6">
           <div
-            class="service-item bg-white rounded d-flex flex-column align-items-center text-center"
+            class="service-item service-radius bg-yellow rounded d-flex flex-column align-items-center text-center"
           >
-            <img class="img-fluid" src="img/service/service-2 .webp" alt="" />
+            <img class="img-fluid service-img" src="img/service/service-2 .webp" alt="" />
             <div class="service-icon bg-white">
               <i class="fa fa-3x fa-home text-primary"></i>
             </div>
@@ -323,9 +323,9 @@
         </div>
         <div class="col-lg-4 col-md-6">
           <div
-            class="service-item bg-white rounded d-flex flex-column align-items-center text-center"
+            class="service-item service-radius bg-yellow rounded d-flex flex-column align-items-center text-center"
           >
-            <img class="img-fluid" src="img/service/service-3.webp" alt="" />
+            <img class="img-fluid service-img" src="img/service/service-3.webp" alt="" />
             <div class="service-icon bg-white">
               <i class="fa fa-3x fa-drafting-compass text-primary"></i>
             </div>
@@ -336,9 +336,9 @@
         </div>
         <div class="col-lg-4 col-md-6">
           <div
-            class="service-item bg-white rounded d-flex flex-column align-items-center text-center"
+            class="service-item service-radius bg-yellow rounded d-flex flex-column align-items-center text-center"
           >
-            <img class="img-fluid" src="img/service/service-4.webp" alt="" />
+            <img class="img-fluid service-img" src="img/service/service-4.webp" alt="" />
             <div class="service-icon bg-white">
               <i class="fa fa-3x fa-palette text-primary"></i>
             </div>
@@ -350,9 +350,9 @@
         </div>
         <div class="col-lg-4 col-md-6">
           <div
-            class="service-item bg-white rounded d-flex flex-column align-items-center text-center"
+            class="service-item service-radius bg-yellow rounded d-flex flex-column align-items-center text-center"
           >
-            <img class="img-fluid" src="img/service/services-7.webp" alt="" />
+            <img class="img-fluid service-img" src="img/service/services-7.webp" alt="" />
             <div class="service-icon bg-white">
               <i class="fa fa-3x fa-tools text-primary"></i>
             </div>
@@ -364,9 +364,9 @@
         </div>
         <div class="col-lg-4 col-md-6">
           <div
-            class="service-item bg-white rounded d-flex flex-column align-items-center text-center"
+            class="service-item service-radius bg-yellow rounded d-flex flex-column align-items-center text-center"
           >
-            <img class="img-fluid" src="img/service/services-6.webp" alt="" />
+            <img class="img-fluid service-img" src="img/service/services-6.webp" alt="" />
             <div class="service-icon bg-white">
               <i class="fa fa-3x fa-paint-brush text-primary"></i>
             </div>
@@ -374,6 +374,13 @@
               <h4 class="text-uppercase mb-3">Painting</h4>
             </div>
           </div>
+        </div>
+        <div class="text-center mx-auto" style="max-width: 600px">
+          <a
+            href="project.html"
+            class="nav-item nav-link btn btn-primary text-white px-5 ms-3 d-none d-lg-block"
+            >View More Services<i class="bi bi-arrow-right"></i
+          ></a>
         </div>
       </div>
     </div>
